:sparkles: Agregando Tecnologia

--- a/tecnologia.html
+++ b/tecnologia.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siman El Salvador</title>
+    <title>Siman - Tecnologia</title>
     <link rel="stylesheet" href=".\css\main.css">
     <link rel="icon" href="https://res.cloudinary.com/dqibsyfye/image/upload/v1749230660/unnamed_bm9c1k.png" />
-
 </head>
 <body>
 
@@ -26,25 +25,22 @@
 
     </header>
 
-    <section class="banner">
-        <h1>¡Ofertas increíbles en el mes del padre!</h1>
-        <p>Aprovecha descuentos de hasta el 70% en todas las categorías.</p>
-        <a href="#" class="btn-banner">Suscribirme para recibir promociones en mi correo</a>
+    <section class="tecnologia">
     </section>
 
     <section class="productos">
-        <h2>Nuevas ofertas</h2>
+        <h2>Ultmimas ofertas en tecnologia</h2>
         <div class="producto-lista">
             <div class="producto">
-                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749406612/tv_vnqk4t.webp" alt="Producto 1">
-                <h3>Smart TV Samsung de 42" 2025</h3>
-                <p class="precio">$295.99 <span class="precio-original">$574.99</span></p>
+                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415374/6975609-1600-auto_w5yplr.webp" alt="Producto 1">
+                <h3>Teclado Mecanico REDRAGON RGB</h3>
+                <p class="precio">$31.99<span class="precio-original">$44.50</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
-                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749406646/PRAB6517611505_G_3_zwa61k.jpg" alt="Producto 2">
-                <h3>Paco Rabanne Invictus</h3>
-                <p class="precio">$124.99 <span class="precio-original">$175.99</span></p>
+                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415462/6953266-1600-auto_mxgwrp.webp" alt="Producto 2">
+                <h3>Soporte de camara GoPro</h3>
+                <p class="precio">$24.99 <span class="precio-original">$35.97</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
@@ -54,21 +50,21 @@
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
-                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749407128/6080796-1600-auto_vblkjs.webp" alt="Producto 4">
-                <h3>Afeitadora One Blade para rostro y cuerpo</h3>
-                <p class="precio">$67.50 <span class="precio-original">$81.99</span></p>
+                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415566/6953239-1600-auto_eyrro1.webp" alt="Producto 4">
+                <h3>Sistema Wi-Fi Mesh TP-Link</h3>
+                <p class="precio">$99.99 <span class="precio-original">$125.99</span></p>
+                <button>Agregar al carrito</button>
+            </div>
+            <div class="producto">                
+                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415627/6952368-1600-auto_vxg1hg.webp" alt="Producto 5">
+                <h3>Amazon Fire TV Stick 4K Max 2025 New Generation</h3>
+                <p class="precio">$68.55 <span class="precio-original">"$85.99"</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
-                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749407368/5844202-1200-auto_rrlqwd.webp" alt="Producto 5">
-                <h3>Aire Acondicionado Samsung 12,000 BTU</h3>
-                <p class="precio">$359.95 <span class="precio-original">$535.00</span></p>
-                <button>Agregar al carrito</button>
-            </div>
-            <div class="producto">
-                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749407513/5738058-1600-auto_slzrvp.webp" alt="Producto 6">
-                <h3>Zapato casual Everlast para mujer</h3>
-                <p class="precio">$34.42 <span class="precio-original">$45.90</span></p>
+                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415719/6910759-1600-auto_qhcpkd.webp" alt="Producto 6">
+                <h3>Reloj smartwatch Cubitt Aura</h3>
+                <p class="precio">$134.42 <span class="precio-original">$155.90</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
@@ -84,15 +80,15 @@
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
-                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749408069/5112736-1600-auto_oj5ye4.webp" alt="Producto 9">
-                <h3>Jack Hidraulico 2 Toneladas para uso domestico</h3>
-                <p class="precio">$97.50 <span class="precio-original">$120.99</span></p>
+                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415766/6952373-1600-auto_jbincd.webp" alt="Producto 9">
+                <h3>TRIPODE PARA CAMARA GOPRO </h3>
+                <p class="precio">$57.50 <span class="precio-original">$85.99</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
-                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749408557/6400672-1600-auto_rlw409.png" alt="Producto 10">
-                <h3>Caja de herramientas de 3 cajones juego de 98 piezas</h3>
-                <p class="precio">$212.95 <span class="precio-original">$"$265.00"</span></p>
+                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415957/6952391-1600-auto_pq45zc.webp" alt="Producto 10">
+                <h3>Celular Honor Play 9A</h3>
+                <p class="precio">$109.00 <span class="precio-original">$"129.95"</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
@@ -102,9 +98,9 @@
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
-                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749409184/6965018-1600-auto_tytodg.webp" alt="Producto 12">
-                <h3>Cama Florida Soporte Ortopedico Comfort</h3>
-                <p class="precio">$399.99 <span class="precio-original">$"$458.95"</span></p>
+                <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749416062/6962543-1600-auto_k8uar6.webp" alt="Producto 12">
+                <h3>XBOX series S 512GB ROM </h3>
+                <p class="precio">$429.99 <span class="precio-original">$479.99</span></p>
                 <button>Agregar al carrito</button>
             </div>
         </div>
@@ -117,5 +113,3 @@
 
 </body>
 </html>
-
-
