:sparkles: Agregando Ropa

--- a/tecnologia.html
+++ b/tecnologia.html
@@ -29,7 +29,7 @@
     </section>
 
     <section class="productos">
-        <h2>Ultmimas ofertas en tecnologia</h2>
+        <h2>Ultimas ofertas en tecnologia</h2>
         <div class="producto-lista">
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415374/6975609-1600-auto_w5yplr.webp" alt="Producto 1">
