:sparkles: :pencil2: Agregando formulario para suscribirse a promociones y corrigiendo typos en todo el website

--- a/hogar.html
+++ b/hogar.html
@@ -88,13 +88,13 @@
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749423934/6916611-1600-auto_ebopme.webp" alt="Producto 10">
                 <h3>Carreta decorativa para jardín </h3>
-                <p class="precio">$185.50 <span class="precio-original">$"239.90"</span></p>
+                <p class="precio">$185.50 <span class="precio-original">$239.90</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749423999/6913707-1600-auto_u3r6g2.webp" alt="Producto 11">
                 <h3>Basurero de acero inoxidable con sensor</h3>
-                <p class="precio">$52.95 <span class="precio-original">"$69.00"</span></p>
+                <p class="precio">$52.95 <span class="precio-original">$69.00</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
