--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="banner">
         <h1>¡Ofertas increíbles en el mes del padre!</h1>
         <p>Aprovecha descuentos de hasta el 70% en todas las categorías.</p>
-        <a href="#" class="btn-banner">Suscribirme para recibir promociones en mi correo</a>
+        <a href="suscribirse.html" class="btn-banner">Suscribirme para recibir promociones en mi correo</a>
     </section>
 
     <section class="productos">
@@ -55,7 +55,7 @@
             </div>
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749407128/6080796-1600-auto_vblkjs.webp" alt="Producto 4">
-                <h3>Afeitadora One Blade para rostro y cuerpo</h3>
+                <h3>Afeitadora One Blade</h3>
                 <p class="precio">$67.50 <span class="precio-original">$81.99</span></p>
                 <button>Agregar al carrito</button>
             </div>
@@ -92,19 +92,19 @@
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749408557/6400672-1600-auto_rlw409.png" alt="Producto 10">
                 <h3>Caja de herramientas de 3 cajones juego de 98 piezas</h3>
-                <p class="precio">$212.95 <span class="precio-original">$"$265.00"</span></p>
+                <p class="precio">$212.95 <span class="precio-original">$265.00</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749409030/5379532-1600-auto_cfxu9s.webp" alt="Producto 11">
                 <h3>Bocina JBL Xtreme 4 100 Watts</h3>
-                <p class="precio">$278.95 <span class="precio-original">$"$324.00"</span></p>
+                <p class="precio">$278.95 <span class="precio-original">$324.00</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749409184/6965018-1600-auto_tytodg.webp" alt="Producto 12">
                 <h3>Cama Florida Soporte Ortopedico Comfort</h3>
-                <p class="precio">$399.99 <span class="precio-original">$"$458.95"</span></p>
+                <p class="precio">$399.99 <span class="precio-original">$458.95</span></p>
                 <button>Agregar al carrito</button>
             </div>
         </div>
