--- a/ropa.html
+++ b/ropa.html
@@ -88,13 +88,13 @@
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749422348/6980807-1600-auto_cfvlke.webp" alt="Producto 10">
                 <h3>Camisa formal Pierre Cardin Regural fit</h3>
-                <p class="precio">$35.50 <span class="precio-original">$"39.90"</span></p>
+                <p class="precio">$35.50 <span class="precio-original">$39.90</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749422575/6972017-1600-auto_chboaw.webp" alt="Producto 11">
                 <h3>Blusa Sabrina formal rosada manga corta</h3>
-                <p class="precio">$27.95 <span class="precio-original">"$34.00"</span></p>
+                <p class="precio">$27.95 <span class="precio-original">$34.00</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
