--- a/tecnologia.html
+++ b/tecnologia.html
@@ -58,7 +58,7 @@
             <div class="producto">                
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415627/6952368-1600-auto_vxg1hg.webp" alt="Producto 5">
                 <h3>Amazon Fire TV Stick 4K Max 2025 New Generation</h3>
-                <p class="precio">$68.55 <span class="precio-original">"$85.99"</span></p>
+                <p class="precio">$68.55 <span class="precio-original">$85.99</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
@@ -88,13 +88,13 @@
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749415957/6952391-1600-auto_pq45zc.webp" alt="Producto 10">
                 <h3>Celular Honor Play 9A</h3>
-                <p class="precio">$109.00 <span class="precio-original">$"129.95"</span></p>
+                <p class="precio">$109.00 <span class="precio-original">$129.95</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
                 <img src="https://res.cloudinary.com/dqibsyfye/image/upload/v1749409030/5379532-1600-auto_cfxu9s.webp" alt="Producto 11">
                 <h3>Bocina JBL Xtreme 4 100 Watts</h3>
-                <p class="precio">$278.95 <span class="precio-original">$"$324.00"</span></p>
+                <p class="precio">$278.95 <span class="precio-original">$324.00</span></p>
                 <button>Agregar al carrito</button>
             </div>
             <div class="producto">
